compiler/driver/tests/snapshots/diagnostics_snapshots__diag_time_start_non_string.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(& out)
---
error[E008]: argument type mismatch in call to `time_start`
  --> test.ny:1:25
   |
  1 | fn main() {
   |                         ^
   = note: expected string label, found i32
